# toolz-stubs

./: .gitignore  Makefile  README.md  partial-stubs-investigation.md  pyproject.toml  pyrightconfig.json  test_partial_stubs.py  test_typing.py
.github/workflows/: ci.yml
.zed/: settings.json
src/toolz/: __init__.pyi  dicttoolz.pyi  functoolz.pyi  itertoolz.pyi
src/toolz-stubs/: dicttoolz.pyi  functoolz.pyi  itertoolz.pyi  recipes.pyi  utils.pyi
src/toolz-stubs/curried/: __init__.pyi  exceptions.pyi
src/toolz-stubs/sandbox/: parallel.pyi
src/toolz/curried/: __init__.pyi  exceptions.pyi  operator.pyi
src/toolz/sandbox/: core.pyi  parallel.pyi
test_stubs/: test_import.py
tests/: test_curried.py  test_dicttoolz.py  test_functoolz.py  test_itertoolz.py  test_tlz_dicttoolz.py  test_tlz_functoolz.py  test_tlz_itertoolz.py
type_tests/: test_partial_stubs.py  test_typing.py
