[project]
name = "toolz-stubs"
version = "0.1.0"
description = "Type stubs for toolz"
readme = "README.md"
authors = [
    { name = "Michael Grinshpon", email = "mgrinshpon@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "toolz~=1.0",
    "typing-extensions>=4.10.0", # TypeIs
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toolz-stubs"]

[tool.hatch.build.targets.wheel.force-include]
"src/toolz-stubs" = "tlz-stubs"

[dependency-groups]
dev = [
    "basedpyright>=1.31.7",
    "ruff>=0.14.1",
    "cytoolz~=1.0",
    "pytest>=8.4.2",
]

[tool.ruff.lint]
# Unused imports are expected in stub files
# This mirrors library's API.
per-file-ignores = {"**/__init__.pyi" = ["F401"]}

[tool.ruff.lint.isort]
# In __init__.pyi, without these rules, every import becomes its own line.
# 1. Combine multiple imports from the same module into a single line
# 2. Keep imports split across multiple lines if they don't fit
combine-as-imports = true
split-on-trailing-comma = false

[tool.pytest.ini_options]
# Exclude type_tests directory - these files are for basedpyright analysis only
# They contain reveal_type() calls which don't exist at runtime
testpaths = ["tests"]
python_files = "test_*.py"
