[project]
name = "toolz-stubs"
description = "Type stubs for toolz"
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
authors = [{ name = "Michael Grinshpon", email = "mgrinshpon@gmail.com" }]
keywords = [
  "cytoolz",
  "functional",
  "stubs",
  "tlz",
  "toolz",
  "type hints",
  "typing"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Stubs Only",
]
dependencies = [
  "toolz~=1.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/mgrinshpon/toolz-stubs"
Issues = "https://github.com/mgrinshpon/toolz-stubs/issues"
Repository = "https://github.com/mgrinshpon/toolz-stubs"

[dependency-groups]
dev = [
  "basedpyright>=1.31.7",
  "cytoolz~=1.0",
  "pytest>=8.4.2",
  "ruff>=0.14.1",
]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/toolz-stubs"]

[tool.hatch.build.targets.wheel.force-include]
"src/toolz-stubs" = "tlz-stubs"

[tool.pytest.ini]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff.lint]
# Unused imports are expected in stub files
# This mirrors library's API.
per-file-ignores = { "**/__init__.pyi" = ["F401"] }

[tool.ruff.lint.isort]
# In __init__.pyi, without these rules, every import becomes its own line.
# 1. Combine multiple imports from the same module into a single line
# 2. Keep imports split across multiple lines if they don't fit
combine-as-imports = true
split-on-trailing-comma = false
